src/ovraudio/sys.rs

extern "C" {
    /// Apply headphone correction algorithm to stereo buffer.
///
/// NOTE: Currently unimplemented
///
/// \param Context[in] context to use
/// \param OutLeft[out] pointer to floating point left channel buffer destination
/// \param OutRight[out] pointer to floating point right channel buffer destination
/// \param InLeft[in] pointer to floating point left channel buffer source
/// \param InRight[in] pointer to floating point right channel buffer source
/// \param NumSamples size of buffers (in samples)
/// \return Returns an ovrResult indicating success or failure
/// \see ovrAudio_SetHeadphoneModel
///
    pub fn ovrAudio_ApplyHeadphoneCorrection(Context: ovrAudioContext,
                                             OutLeft: *mut f32,
                                             OutRight: *mut f32,
                                             InLeft: *const f32,
                                             InRight: *const f32,
                                             NumSamples:
                                                 ::std::os::raw::c_int)
     -> ovrResult;
}
extern "C" {
    /// Mix shared reverb into buffer
///
/// \param Context[in] context to use
/// \param InFlags[in] spatialization flags to apply 
/// \param OutStatus[out] bitwise OR of flags indicating status of currently playing sound
/// \param OutLeft[out] pointer to floating point left channel buffer to mix into (MUST CONTAIN VALID AUDIO OR SILENCE)
/// \param OutRight[out] pointer to floating point right channel buffer to mix into (MUST CONTAIN VALID AUDIO OR SILENCE)
/// \return Returns an ovrResult indicating success or failure
///
    pub fn ovrAudio_MixInSharedReverbLR(Context: ovrAudioContext,
                                        OutStatus: *mut u32,
                                        DstLeft: *mut f32, DstRight: *mut f32)
     -> ovrResult;
}
extern "C" {
    /// Mix shared reverb into interleaved buffer
///
/// \param Context[in] context to use
/// \param InFlags[in] spatialization flags to apply 
/// \param OutStatus[out] bitwise OR of flags indicating status of currently playing sound
/// \param DstInterleaved pointer to interleaved floating point left&right channels buffer to mix into (MUST CONTAIN VALID AUDIO OR SILENCE)
/// \return Returns an ovrResult indicating success or failure
///
    pub fn ovrAudio_MixInSharedReverbInterleaved(Context: ovrAudioContext,
                                                 OutStatus: *mut u32,
                                                 DstInterleaved: *mut f32)
     -> ovrResult;
}
extern "C" {
    /// Sets the min and max range of the shared reverb.
///
/// \param Context context to use
/// \param RangeMin min range in meters (full gain)
/// \param RangeMax max range in meters
/// \return Returns an ovrResult indicating success or failure
/// \see ovrAudio_SetListenerPoseStatef
/// \see ovrAudio_MixInSharedReverbLR
///
    pub fn ovrAudio_SetSharedReverbRange(Context: ovrAudioContext,
                                         RangeMin: f32, RangeMax: f32)
     -> ovrResult;
}
extern "C" {
    /// Gets the min and max range of the shared reverb.
///
/// \param Context context to use
/// \param pRangeMin addr of the returned min range in meters (full gain)
/// \param pRangeMax addr of the returned max range in meters
/// \return Returns an ovrResult indicating success or failure
/// \see ovrAudio_SetSharedReverbRange
/// \see ovrAudio_SetListenerPoseStatef
/// \see ovrAudio_MixInSharedReverbLR
///
    pub fn ovrAudio_GetSharedReverbRange(Context: ovrAudioContext,
                                         pRangeMin: *mut f32,
                                         pRangeMax: *mut f32) -> ovrResult;
}
extern "C" {
    /// Set user headRadius.
///
/// NOTE: This API is intended to let you set user configuration parameters that
/// may assist with spatialization.
///
/// \param Context[in] context to use
/// \param Config[in] configuration state
    pub fn ovrAudio_SetHeadRadius(Context: ovrAudioContext, HeadRadius: f32)
     -> ovrResult;
}
extern "C" {
    /// Set user configuration.
///
/// NOTE: This API is intended to let you set user configuration parameters that
/// may assist with spatialization.
///
/// \param Context[in] context to use
/// \param Config[in] configuration state
    pub fn ovrAudio_GetHeadRadius(Context: ovrAudioContext,
                                  HeadRadius: *mut f32) -> ovrResult;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _ovrAudioPrivateAPI {
    _unused: [u8; 0],
}
/// \typedef ovrAudioPrivateAPI
/// \brief   Opaque type used for access to private/hidden functions.
///
pub type ovrAudioPrivateAPI = _ovrAudioPrivateAPI;
extern "C" {
    pub fn ovrAudio_GetPrivateAPI(Context: ovrAudioContext,
                                  Dst: *mut ovrAudioPrivateAPI) -> ovrResult;
}
extern "C" {
    /// Retrieve a performance counter.
///
/// \param Context[in] context to use
/// \param Counter[in] the counter to retrieve
/// \param Count[out] destination for count variable (number of times that counter was updated)
/// \param TimeMicroSeconds destination for total time spent in that performance counter
/// \return Returns an ovrResult indicating success or failure
/// \see ovrAudio_ResetPerformanceCounter
///
    pub fn ovrAudio_GetPerformanceCounter(Context: ovrAudioContext,
                                          Counter: ovrAudioPerformanceCounter,
                                          Count: *mut i64,
                                          TimeMicroSeconds: *mut f64)
     -> ovrResult;
}
extern "C" {
    /// Reset a performance counter.
///
/// \param Context[in] context to use
/// \param Counter[in] the counter to retrieve
/// \see ovrAudio_ResetPerformanceCounter
///
    pub fn ovrAudio_ResetPerformanceCounter(Context: ovrAudioContext,
                                            Counter:
                                                ovrAudioPerformanceCounter)
     -> ovrResult;
}
extern "C" {
    /// Quad-binaural spatialization 
///
/// \param ForwardLR[in] pointer to stereo interleaved floating point binaural audio for the forward direction (0 degrees)
/// \param RightLR[in] pointer to stereo interleaved floating point binaural audio for the right direction (90 degrees)
/// \param BackLR[in] pointer to stereo interleaved floating point binaural audio for the backward direction (180 degrees)
/// \param LeftLR[in] pointer to stereo interleaved floating point binaural audio for the left direction (270 degrees)
/// \param LookDirectionX[in] X component of the listener direction vector
/// \param LookDirectionY[in] Y component of the listener direction vector
/// \param LookDirectionZ[in] Z component of the listener direction vector
/// \param NumSamples[in] size of audio buffers (in samples)
/// \param Dst[out] pointer to stereo interleaved floating point destination buffer
///
    pub fn ovrAudio_ProcessQuadBinaural(ForwardLR: *const f32,
                                        RightLR: *const f32,
                                        BackLR: *const f32,
                                        LeftLR: *const f32,
                                        LookDirectionX: f32,
                                        LookDirectionY: f32,
                                        LookDirectionZ: f32,
                                        NumSamples: ::std::os::raw::c_int,
                                        Dst: *mut f32) -> ovrResult;
}
extern "C" {
    /// Create an ambisonic stream instance for spatializing B-format ambisonic audio
///
/// \param SampleRate[in] sample rate of B-format signal (16000 to 48000, but 44100 and 48000 are recommended for best quality)
/// \param AudioBufferLength[in] size of audio buffers
/// \param pContext[out] pointer to store address of stream.
///
    pub fn ovrAudio_CreateAmbisonicStream(Context: ovrAudioContext,
                                          SampleRate: ::std::os::raw::c_int,
                                          AudioBufferLength:
                                              ::std::os::raw::c_int,
                                          format: ovrAudioAmbisonicFormat,
                                          ambisonicOrder:
                                              ::std::os::raw::c_int,
                                          pAmbisonicStream:
                                              *mut ovrAudioAmbisonicStream)
     -> ovrResult;
}
extern "C" {
    /// Reset a previously created ambisonic stream for re-use
///
/// \param[in] Context a valid ambisonic stream
///
    pub fn ovrAudio_ResetAmbisonicStream(AmbisonicStream:
                                             ovrAudioAmbisonicStream)
     -> ovrResult;
}
extern "C" {
    /// Destroy a previously created ambisonic stream.
///
/// \param[in] Context a valid ambisonic stream
/// \see ovrAudio_CreateAmbisonicStream
///
    pub fn ovrAudio_DestroyAmbisonicStream(AmbisonicStream:
                                               ovrAudioAmbisonicStream)
     -> ovrResult;
}
extern "C" {
    /// Sets the virtual speaker layout for the ambisonic stream.
///
/// \param[in] Context a valid ambisonic stream
/// \see ovrAudioAmbisonicSpeakerLayout
///
    pub fn ovrAudio_SetAmbisonicSpeakerLayout(AmbisonicStream:
                                                  ovrAudioAmbisonicStream,
                                              Layout:
                                                  ovrAudioAmbisonicSpeakerLayout)
     -> ovrResult;
}
extern "C" {
    /// Sets the virtual speaker layout for the ambisonic stream.
///
/// \param[in] Context a valid ambisonic stream
/// \see ovrAudioAmbisonicSpeakerLayout
///
    pub fn ovrAudio_GetAmbisonicSpeakerLayout(AmbisonicStream:
                                                  ovrAudioAmbisonicStream,
                                              Layout:
                                                  *mut ovrAudioAmbisonicSpeakerLayout)
     -> ovrResult;
}
extern "C" {
    /// Spatialize a mono in ambisonics
///
/// \param InMono[in] Mono audio buffer to spatialize
/// \param DirectionX[in] X component of the direction vector
/// \param DirectionY[in] Y component of the direction vector
/// \param DirectionZ[in] Z component of the direction vector
/// \param Format[in] ambisonic format (AmbiX or FuMa)
/// \param AmbisonicOrder[in] order of ambisonics (1 or 2)
/// \param OutAmbisonic[out] Buffer to write interleaved ambisonics to (4 channels for 1st order, 9 channels for second order)
/// \param NumSamples[in] Length of the buffer in frames (InMono is this length, OutAmbisonic is either 4 or 9 times this length depending on 1st or 2nd order)
///
    pub fn ovrAudio_MonoToAmbisonic(InMono: *const f32, DirectionX: f32,
                                    DirectionY: f32, DirectionZ: f32,
                                    Format: ovrAudioAmbisonicFormat,
                                    AmbisonicOrder: ::std::os::raw::c_int,
                                    OutAmbisonic: *mut f32,
                                    NumSamples: ::std::os::raw::c_int)
     -> ovrResult;
}
